# llmstart-agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.cursor/rules/methodology/: 00-methodology.mdc  40-skills-router.mdc
.methodology/rules/: 10-conventions.mdc
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  core.py  prompts.py
backend/app/api/: chat.py  deps.py  health.py  router.py  sessions.py  sse.py
backend/app/api/schemas/: chat.py  session.py
backend/app/observability/: langfuse.py
backend/app/rag/: __init__.py  indexer.py  retriever.py  store.py
backend/app/sessions/: models.py  store.py
backend/app/tools/: __init__.py  context.py  knowledge.py  leads.py  payments.py  products.py  registry.py
backend/tests/: conftest.py  fakes.py  test_agent.py  test_agent_integration.py  test_app.py  test_auth.py  test_chat_api.py  test_config.py  test_health.py  test_langfuse.py  test_rag.py  test_sessions.py  test_tools.py
bot/: Dockerfile  README.md  pyproject.toml
bot/bot/: __init__.py  backend_client.py  config.py  html_formatter.py  main.py  reply.py  session_registry.py
bot/bot/handlers/: __init__.py  messages.py  start.py  start_parser.py
bot/tests/: __init__.py  test_backend_client.py  test_config.py  test_html_formatter.py  test_start_handler.py
data/b2b/: corporate-training.md  custom-development.md  enterprise-packages.md
data/b2c/: agents-course.md  llm-fundamentals.md  products.json  rag-workshop.md
datasets/: analysis-report.md  dataset-plan.md  summary.md
datasets/dialogs/flat/: CHAT_0014.txt  CHAT_0020.txt  CHAT_0070.txt  CHAT_0110.txt  CHAT_0127.txt
datasets/schemas/: dataset_record.py
datasets/v1/: all.jsonl  b2c.jsonl  coverage-report.md  validation-sample.md
datasets/v1/extracted/: b2b.jsonl
datasets/v1/synthesized/: all.jsonl
datasets/v2/: README.md  all.jsonl  b2b.jsonl  b2c.jsonl  coverage-report.md  validation-sample.md
datasets/v2/extracted/: all.jsonl  b2c.jsonl  sample.jsonl
datasets/v2/guardrails/: all.jsonl
datasets/v2/synthesized/: b2b.jsonl  b2c.jsonl  pilot.jsonl
docs/: roadmap.md
docs/adrs/: 0001-react-agent-core.md  0002-in-memory-sessions.md  0003-mock-payments-crm.md
docs/concept/: api-contracts.md  architecture.md  idea.md  integrations.md  user-scenarios.md  vision.md
frontend/: .npmrc  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: AgentActivity.test.tsx  MessageList.test.tsx  page.test.tsx  sse-parser.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api-client.ts  backend-config.ts  session.ts  sse-parser.ts  types.ts
infra/langfuse/: .env.example  README.md  docker-compose.yml
scripts/: build_extracted_dataset.py  build_synthesized_dataset.py  build_v1_dataset.py  build_v2_dataset.py  flatten_dialogs.py  upload_langfuse_dataset.py  validate_dataset.py
(+31 files in other folders)
