[project]
name = "backend"
version = "0.1.0"
description = "LLMStart Agent Core — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.12.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"app/agent/prompts.py" = ["RUF001"]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "ARG001", "ARG002", "TRY003", "EM101"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "langchain_text_splitters.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
